--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+/* @import-normalize; */
+
+html {
+  height: -webkit-fill-available;
+}
+
 body {
-  margin: 0;
+  height: inherit;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +16,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
 }
