Добавлены стр. логин, регистрация, восст. пароля

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,11 +1,11 @@
 .App {
   display: flex;
   flex-grow: 1;
-
+  flex-direction: column;
   box-sizing: border-box;
 }
 
-.containerFlex {
+/* .containerFlex {
   display: flex;
   flex-direction: column;
-}
+} */
