--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,11 +1,7 @@
 .App {
+  height: 100%;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
   box-sizing: border-box;
 }
-
-/* .containerFlex {
-  display: flex;
-  flex-direction: column;
-} */
